wordpress-5.4/wp-includes/SimplePie/HTTP/Parser.errors.txt
Traceback (most recent call last):
  File "/Users/nico/repos/php2py/ast2py.py", line 43, in is_valid_code
    ast.parse(src.replace('\x00', ''))
  File "/usr/local/Cellar/python/3.7.7/Frameworks/Python.framework/Versions/3.7/lib/python3.7/ast.py", line 35, in parse
    return compile(source, filename, mode, PyCF_ONLY_AST)
  File "<unknown>", line 376
    decoded += part = php_substr(encoded, chunk_length, length)
                    ^
SyntaxError: invalid syntax
